fix styling on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,7 @@
   font-size: 30px;
   flex: 1;
   margin-left: 230px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   overflow: auto;
   padding: 10px;
   padding-top: 0px;
